@@ -1,9 +1,8 @@
 package galyleo.shell.jshell;
 
-import com.fasterxml.jackson.databind.JsonNode;
+import galyleo.server.Message;
 import lombok.NoArgsConstructor;
 
-import static galyleo.server.Server.OBJECT_MAPPER;
 import static lombok.AccessLevel.PRIVATE;
 
 /**
@@ -22,23 +21,7 @@ public abstract class StaticImports {
      */
     public static void print(Object object) {
         try {
-            var node = OBJECT_MAPPER.createObjectNode();
-            var data = node.with("data");
-            var metadata = node.with("metadata");
-
-            if (object instanceof JsonNode) {
-                var type = "application/json";
-
-                data.set(type, (JsonNode) object);
-                metadata.with(type);
-            }
-
-            var type = "text/plain";
-
-            data.put(type, String.valueOf(object));
-            metadata.with(type);
-
-            ExecutionEvents.json.add(node);
+            ExecutionEvents.json.add(Message.content(object));
         } catch (Exception exception) {
             System.out.println(object);
             exception.printStackTrace(System.err);
